--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,8 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<h1>Marre de vous faire avoir?</h1>
+<p>Estimez le vrai prix de votre voiture</p>
+
+<%= simple_form_for @car do |f| %>
+  <%= f.input :registration_number, as: :integer %>
+  <%= f.input :estimated_kilometers, as: :range %>
+  <%= f.submit "Submit", class: "btn btn-primary" %>
+<% end %>
