correction d'un @car

--- a/app/views/cars/final_validation.html.erb
+++ b/app/views/cars/final_validation.html.erb
@@ -35,8 +35,9 @@
 
   <div class="add-description-wrapper">
 
+
     <p>Votre annonce:</p>
-    <p>"Bonjour, je vend ma <%= @car.car_brand %> <%= @car.model_type %> sur <%= car.location %>. Je dois m'en séparer car je <%= @car.why_selling? %>."</p>
+    <p>"Bonjour, je vend ma <%= @car.car_brand %> <%= @car.model_type %> sur <%= @car.location %>. Je dois m'en séparer car je <%= @car.why_selling? %>."</p>
 
 
   </div>
