--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -1,8 +1,10 @@
 // Import Google fonts
-@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,300,700|Raleway:400,100,300,700,500|Roboto");
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,300,700|Raleway:400,100,300,700,500|Roboto|Montserrat:300|Fira+Sans:400,500,600,700");
+
+// <link href="https://fonts.googleapis.com/css?family=Cormorant|Lato:300,400" rel="stylesheet">
 // Define fonts for body and headers
-$body-font: 'Open Sans', sans-serif;
-$headers-font: 'Roboto', sans-serif;
+$body-font: 'Roboto', sans-serif;
+$headers-font: 'Fira Sans', sans-serif;
 
 // To use a font file (.woff) uncomment following lines
 // @font-face {
