--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,22 +1,26 @@
 <div class="main-container">
-  <div class="body-row">
 
-    <div class="main-title">
-      <h1>Marre de vous faire avoir?</h1>
+  <div class="row body-row header-row">
+    <div class="home-title ">
+      <div class="main-title header__bg">
+        <h1>Marre de vous faire avoir?</h1>
+      </div>
+      <div class="comment-title">
+        <p>Estimez le vrai prix de votre voiture.</p>
+      </div>
     </div>
-    <div class="comment-title">
-      <p>Estimez le vrai prix de votre voiture.</p>
-    </div>
-    <div class="first-form">
+  </div>
+
+ <div class="row body-row">
+    <div class="first-form Section Content">
       <%= simple_form_for @car do |f| %>
         <%= f.input :registration_number, as: :string %>
-        <%= f.input :estimated_kilometers, as: :range %>
-        <%= f.submit "Submit", class: "btn btn-submit" %>
+        <%= f.input :estimated_kilometers, as: :range, :as => :hidden, input_html: { id: 'trueSlider', min: '0', max: '1000000'}%>
+        <!-- <input type="range" value="45" data-tooltip="true" id='slider'> -->
+        <input id="ex11" type="text" data-slider-handle="custom"/>
+        <%= f.submit "Prix", class: "btn btn-submit" %>
       <% end %>
     </div>
-
-
-
   </div>
-</div>
 
+</div>
