--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -11,12 +11,11 @@
 
 .header__bg {
   position: absolute;
-  top: 0;
+  top: -90px;
   bottom: 0;
-  right: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 375px;
   background-image: linear-gradient(#ff9d2f, #ff6126);
   transform: skewY(-6deg);
   // transform-origin: top left;
@@ -24,10 +23,14 @@
 
 h1 {
   margin: 0;
-  padding: 10px 0;
+  padding: 30px 10px;
   font: 44px "Arial";
 }
 
 #main-title{
-  transform: skewY(0deg);
+  transform: skewY(6deg);
+}
+
+#comment-title {
+transform: skewY(6deg);
 }
