--- a/app/assets/stylesheets/components/_container_box.scss
+++ b/app/assets/stylesheets/components/_container_box.scss
@@ -2,21 +2,26 @@
   margin: 0px;
   padding: 0px;
   height: 100vh;
-  weight: 100vh;
+  width: 100vw;
   background-color: white;
 }
 
 .body-row {
   padding: 30px 30px;
+  margin-top: -30px;
   margin-bottom: 100px;
 }
 
 .main-title {
-  color: rgb(27, 27, 27);
-  margin-top: 100px;
+  // color: rgb(27, 27, 27);
+  color: white;
+  // margin-top: 100px;
+  margin-top: 30px;
 }
 
 #comment-title {
   color: rgb(27, 27, 27);
-  margin-bottom: 100px;
+  margin-bottom: 40px;
+
+  // color: white;
 }
