--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -18,7 +18,7 @@
         <%= f.input :registration_number, as: :string, id:"reg-number", label:"Numéro de plaque d'immatriculation"%>
         <%= f.input :estimated_kilometers, as: :range, :as => :hidden, input_html: { id: 'trueSlider', min: '0', max: '800000'}%>
         <!-- <input type="range" value="45" data-tooltip="true" id='slider'> -->
-        <label for="ex11">Kilométrage estimé : </label>
+        <label for="ex11">Kilométrage estimé</label>
         <input id="ex11" type="text"/>
         <%= f.submit "Prix", class: "btn btn-submit" %>
       <% end %>
