--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,8 +1,8 @@
 /* Main navbar */
 .navbar-wagon {
   // position: relative;
-  // box-shadow: 0 1px 5px 0 rgba(0,0,0,0.07),0 1px 0 0 rgba(0,0,0,0.03);
-  background: transparent;
+  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.46);
+  background: white;
   // background: white;
   transition: all 0.3s ease;
   height: 50px;
@@ -81,4 +81,22 @@
   transform: rotate(45deg);
   border-left: 1px solid #E6E6E6;
   border-top: 1px solid #E6E6E6;
+}
+
+.navbar-home {
+  // position: relative;
+  // box-shadow: 0 1px 5px 0 rgba(0,0,0,0.07),0 1px 0 0 rgba(0,0,0,0.03);
+  background: transparent;
+  // background: white;
+  transition: all 0.3s ease;
+  height: 50px;
+  padding: 0px 30px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  z-index: 2;
+  width: 100%;
+  position: sticky !important; /* !important to override Gmaps inline CSS */
+  top: 0 !important;
+  // position: fixed;
 }
