--- a/app/views/cars/first_estimation.html.erb
+++ b/app/views/cars/first_estimation.html.erb
@@ -1,14 +1,13 @@
 <h1>First estimation</h1>
-<<<<<<< HEAD
-<p>Que pouvez vous obtenir pour votre <%= @car.brand %> <%= @car.model %></p>
-<p>Notre Estimation: <%= @car.estimated_price %> euros </p>
+
+<p>Que pouvez vous obtenir pour votre <strong> <%= @car.car_brand %> <%= @car.model_type %> </strong></p>
+<p>l'estimation Karl: <%= @car.estimated_price %> euros </p>
 <p>Prix concessionnaire: <%= @car.estimated_price / 1.4 %> euros</p>
-=======
 
-<p>Notre Estimation: <%= @car.estimated_price %> €</p>
-<p>Prix concessionnaire: <%= @car.estimated_price * 1.5 %> €</p>
+<div id=chart>
+<canvas id="myChart" width="400" height="400"></canvas>
+</div>
 
->>>>>>> master
 <%= link_to start_car_path(@car) do %>
   <button class="btn btn_primary">Let's go</button>
 <%end%>
