--- a/app/views/cars/start.html.erb
+++ b/app/views/cars/start.html.erb
@@ -4,9 +4,8 @@
     <h1>Rendez-vous près de votre voiture</h1>
   </div>
 
-  <div class="icon-car">
-    <i class="fas fa-car fa-3x"></i>
-    <!-- <i class="fas fa-car-side"></i> -->
+  <div class="car-image">
+    <img src="https://cdn.dribbble.com/users/1249/screenshots/796577/hatchbck_loading.png" alt="">
   </div>
 
   <div class="start-button-box">
