--- a/app/assets/stylesheets/pages/_start-page.scss
+++ b/app/assets/stylesheets/pages/_start-page.scss
@@ -1,8 +1,12 @@
 .start-title {
   text-align: center;
-  margin-top: 50px;
+  margin-top: 70px;
 }
 
+#start-title{
+  font-size: 35px;
+
+}
 .start-button-box{
   margin-top: -30px;
   display: flex;
