--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 
 <%= content_for(:navbar_class, "navbar-home") %>
 
-<div class="main-container">
+<div class="container">
 
   <div class="row body-row" id="header-row">
 
