--- a/app/views/cars/first_estimation.html.erb
+++ b/app/views/cars/first_estimation.html.erb
@@ -1,4 +1,4 @@
-<div class ="main-container" style="padding:15px">
+<div class ="container" style="padding:15px">
   <h3>Notre estimation</h3>
 
   <p>Que pouvez vous obtenir pour votre <strong> <%= @car.car_brand %> <%= @car.model_type %> </strong></p>
