--- a/app/views/cars/start.html.erb
+++ b/app/views/cars/start.html.erb
@@ -1,4 +1,4 @@
-<div class="main-container">
+<div class="container">
 
   <div class="start-title">
     <h1>Rendez-vous près de votre voiture</h1>
