--- a/app/assets/stylesheets/components/_container_box.scss
+++ b/app/assets/stylesheets/components/_container_box.scss
@@ -1,9 +1,6 @@
-.main-container{
-  margin: 0px;
-  padding: 0px;
-  height: 100vh;
-  width: 100vw;
-  background-color: white;
+.container{
+  // padding-left: 0px !important;
+  // padding-right: 0px !important;
 }
 
 .body-row {
