front final message done

--- a/app/views/damages/new.html.erb
+++ b/app/views/damages/new.html.erb
@@ -12,11 +12,7 @@
   <div class="photo-edit">
     <h3>Ajouter des photos du dommage</h3>
     <div class="photo-upload-features">
-<!--       <%#= f.input :picture_1, class: "photo-upload" %>
- --><!--       <input type="file" name="camera" id="camera" accept="image/*" capture="camera" /> -->
-      <label for="damage[picture_1]">picture 1</label>
-      <input class="form-control-file file optional" type="file" name="damage[picture_1]" id="damage_picture_1 camera" accept="image/*" capture="camera" >
-
+      <%= f.input :picture_1, class: "photo-upload" %>
       <%= f.input :picture_1_cache, as: :hidden, class: "photo-upload" %>
       <%= f.input :picture_2, class: "photo-upload"  %>
       <%= f.input :picture_2_cache, as: :hidden, class: "photo-upload" %>
