--- a/app/views/cars/final_validation.html.erb
+++ b/app/views/cars/final_validation.html.erb
@@ -5,34 +5,38 @@
   <!-- les photos -->
   <div class="add-picture-wrapper">
 
-    <div class="final-validation-caroussel">
-      <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+
+    <div class="container-caroussel">
       <% if @car.photo_1.file.nil?%>
         <div >  <%= image_tag "avantgarde-concept-769583-unsplash.jpg", width: 400%></div>
       <% else %>
-        <div class="car-caroussel-indicators">
-          <ol class="carousel-indicators">
-            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-          </ol>
-        </div>
-      <% end %>
-        <div class="carousel-inner" role="listbox" >
-          <div class="item active">
-            <img class="d-block w-100" src="<%= @car.photo_1%>" alt="First slide">
-          </div>
-          <div class="item">
-            <img class="d-block w-100" src="<%= @car.photo_2%>" alt="Second slide">
-          </div>
-          <div class="item">
-            <img class="d-block w-100" src="<%= @car.photo_3%>" alt="Third slide">
-          </div>
-        </div>
-
-      </div>
-    </div>
-
+      <div class="carousel">
+        <input type="radio" id="carousel-1" name="carousel[]" checked>
+        <input type="radio" id="carousel-2" name="carousel[]">
+        <input type="radio" id="carousel-3" name="carousel[]">
+        <ul class="carousel__items">
+          <li class="carousel__item"><img src="<%= @car.photo_1%>" alt=""></li>
+          <li class="carousel__item"><img src="<%= @car.photo_2%>" alt=""></li>
+          <li class="carousel__item"><img src="<%= @car.photo_3%>" alt=""></li>
+        </ul>
+         <div class="carousel__prev">
+          <label for="carousel-1"></label>
+          <label for="carousel-2"></label>
+          <label for="carousel-3"></label>
+         </div>
+         <div class="carousel__next">
+           <label for="carousel-1"></label>
+           <label for="carousel-2"></label>
+           <label for="carousel-3"></label>
+         </div>
+         <div class="carousel__nav">
+           <label for="carousel-1"></label>
+           <label for="carousel-2"></label>
+           <label for="carousel-3"></label>
+         </div>
+       </div>
+       <% end %>
+     </div>
   </div>
 
   <h4 style="text-align:center">Infos véhicules</h4>
@@ -97,31 +101,38 @@
     <h2><%= damage.title %></h2>
     <p><%= damage.description %></p>
 
-    <div class="second-final-validation-caroussel">
-      <div id="secondCarouselExampleIndicators" class="carousel slide" data-ride="carousel">
-
-        <div class="car-caroussel-indicators">
-          <ol class="carousel-indicators">
-            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-          </ol>
-        </div>
-
-        <div class="carousel-inner" role="listbox" >
-          <div class="item active">
-            <img class="d-block w-100" src="<%= damage.picture_1%>" alt="First slide">
-          </div>
-          <div class="item">
-            <img class="d-block w-100" src="<%= damage.picture_2%>" alt="Second slide">
-          </div>
-          <div class="item">
-            <img class="d-block w-100" src="<%= damage.picture_3%>" alt="Third slide">
-          </div>
-        </div>
-
-      </div>
-    </div>
+    <div class="container-caroussel">
+      <% if @car.photo_1.file.nil?%>
+        <div >  <%= image_tag "avantgarde-concept-769583-unsplash.jpg", width: 400%></div>
+      <% else %>
+      <div class="carousel">
+        <input type="radio" id="carousel-4" name="carousel[]" checked>
+        <input type="radio" id="carousel-5" name="carousel[]">
+        <input type="radio" id="carousel-6" name="carousel[]">
+        <ul class="carousel__items">
+          <li class="carousel__item"><img src="<%= damage.picture_1%>" alt=""></li>
+          <li class="carousel__item"><img src="<%= damage.picture_2%>" alt=""></li>
+          <li class="carousel__item"><img src="<%= damage.picture_3%>" alt=""></li>
+        </ul>
+         <div class="carousel__prev">
+          <label for="carousel-4"></label>
+          <label for="carousel-5"></label>
+          <label for="carousel-6"></label>
+         </div>
+         <div class="carousel__next">
+           <label for="carousel-4"></label>
+           <label for="carousel-5"></label>
+           <label for="carousel-6"></label>
+         </div>
+         <div class="carousel__nav">
+           <label for="carousel-4"></label>
+           <label for="carousel-5"></label>
+           <label for="carousel-6"></label>
+         </div>
+       </div>
+       <% end %>
+     </div>
+  </div>
 
     <%= link_to edit_car_damage_path(@car, damage) do %>
       <button class="btn btn_primary">Edit</button>
