--- a/app/views/damages/edit.html.erb
+++ b/app/views/damages/edit.html.erb
@@ -1,24 +1,34 @@
-<h1>Votre dommage:</h1>
 
-<%= simple_form_for [@car, @damage] do |f| %>
-  <div class="title-damage-edit">
-    <p>Titre:</p>
-    <%= f.input :title, as: :string %>
+<div class="container-damages-edit">
+
+  <div class="title-damages-edit">
+    <h3>Votre dommage:</h3>
   </div>
-  <div class="description-damage-edit">
-    <p>description de votre dommage:</p>
-    <%= f.input :description, as: :text %>
+
+  <div class="simple-form-damages-edit">
+    <%= simple_form_for [@car, @damage] do |f| %>
+
+      <div class="title-damage-edit">
+        <%= f.input :title, label: "Titre:", as: :string %>
+      </div>
+
+      <div class="description-damage-edit">
+        <%= f.input :description, label: "Description:",as: :text %>
+      </div>
+
+      <div class="photo-edit">
+        <h5>Ajouter des photos:</h5>
+        <div class="photo-upload-features">
+          <%= f.input :picture_1, label: "Photo n°1:", class: "photo-upload", capture: "camera"%>
+          <%= f.input :picture_1_cache, as: :hidden, class: "photo-upload"%>
+          <%= f.input :picture_2, label: "Photo n°2:",class: "photo-upload"  %>
+          <%= f.input :picture_2_cache, as: :hidden, class: "photo-upload" %>
+          <%= f.input :picture_3, label: "Photo n°3:",class: "photo-upload" %>
+          <%= f.input :picture_3_cache, as: :hidden, class: "photo-upload" %>
+        </div>
+      </div>
+      <%= f.submit "Submit", class: "btn btn-success" %>
+    <%end%>
   </div>
-  <div class="photo-edit">
-    <h3>Ajouter des photos du dommage</h3>
-    <div class="photo-upload-features">
-      <%= f.input :picture_1, class: "photo-upload", capture: "camera"%>
-      <%= f.input :picture_1_cache, as: :hidden, class: "photo-upload"%>
-      <%= f.input :picture_2, class: "photo-upload"  %>
-      <%= f.input :picture_2_cache, as: :hidden, class: "photo-upload" %>
-      <%= f.input :picture_3, class: "photo-upload" %>
-      <%= f.input :picture_3_cache, as: :hidden, class: "photo-upload" %>
-    </div>
-  </div>
-  <%= f.submit "Submit", class: "btn btn-primary" %>
-<%end%>
+</div>
+
