--- a/app/views/cars/first_estimation.html.erb
+++ b/app/views/cars/first_estimation.html.erb
@@ -15,7 +15,7 @@
     </div>
   </div>
   <div id=chart>
-  <canvas id="myChart" width="400" height="400"></canvas>
+    <canvas id="myChart" width="400" height="400" data-prices="<%= @car_prices.to_json%>"></canvas>
   </div>
 
   <div style='text-align: center; padding:10px'>
