--- a/app/views/cars/dashboard.html.erb
+++ b/app/views/cars/dashboard.html.erb
@@ -2,8 +2,7 @@
   <div class="title-box">
     <h1>Dashboard</h1>
   </div>
-</div>
-
+</div>>
 
 <div class="votre-annonce">
   <h2>Votre annonce</h2>
@@ -19,8 +18,7 @@
       <div >
         <p> <strong>Votre estimation</strong></p>
         <p><%= @car.estimated_price %> €</p>
-      </div>
-  </div>
+      </div  </div>
   <div class="info-row-depreciation" >
     <p> <strong>Depreciation</strong></p>
       <div >
