--- a/app/views/cars/first_estimation.html.erb
+++ b/app/views/cars/first_estimation.html.erb
@@ -20,7 +20,7 @@
 
   <div style='text-align: center; padding:10px'>
     <%= link_to start_car_path(@car) do %>
-      <button class="btn btn_primary">Let's go</button>
+      <button class="btn btn-success">Let's go</button>
     <%end%>
   </div>
 </div>
