--- a/app/views/cars/start.html.erb
+++ b/app/views/cars/start.html.erb
@@ -10,7 +10,7 @@
 
   <div class="start-button-box">
     <%= link_to edit_car_path(@car) do %>
-      <button class="btn btn-submit start-button">Start</button>
+      <button class="btn btn-success btn-lg">Start</button>
     <%end%>
   </div>
 
