--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -48,6 +48,7 @@
       <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
         <li><a href="#">Mon profil</a></li>
         <li><a href="#">Dashboard</a></li>
+        <%= link_to "Dashboard", dashboard_path%>
         <li><a href="#"></a></li>
       </ul>
     </div>
