Routes pour le dashboard mises dans pages + code dans la view: réorganisation du code dans la view du dashboard => faire un figma pour organiser le front

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -47,9 +47,7 @@
       <i class="fa fa-bars dropdown-toggle" data-toggle="dropdown"></i>
       <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
         <li><a href="#">Mon profil</a></li>
-        <li><a href="#">Dashboard</a></li>
-        <%= link_to "Dashboard", dashboard_path%>
-        <li><a href="#"></a></li>
+        <li> <%= link_to "Dashboard", dashboard_path%></li>
       </ul>
     </div>
   </div>
